# AI_DotA_Coach

./: .env.example  .gitignore  LICENSE.md  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements.txt
constants/snapshots/: .gitkeep
data/: .data_location.example
data/processed/: .gitkeep
data/raw/matches/: .gitkeep
data/raw/public_matches/: .gitkeep
data/tracking/: downloaded_matches.csv.example  parse_backlog.csv.example
docs/: architecture.md  cli-reference.md  development-roadmap.md  getting-started.md  opendota-api-research-guide.md  project-structure.md
models/: .gitkeep
src/dota_coach/: __init__.py  cli.py  config.py  constants.py  data_flattener.py  data_loader.py  explorer_query.py  extract_match_data.py  generate_dashboard.py  hero_mapping.py  logging_config.py  match_pipeline.py
